[tool.poetry]
name = "cdc-chatbot"
version = "0.1.0"
description = "A sample chatbot showcasing RAG pipeline on CDC dataset."
authors = ["Maaz Karim <MaazKarim02@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
llama-index = "^0.9.45"
chromadb = "^0.4.22"
transformers = "^4.37.2"
torch = "^2.2.0"
streamlit = "^1.31.0"
pypdf = "^4.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
